--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -3,33 +3,35 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
 
+
 <div>
     {{#with main}}
     <main>
         <section>
-            {{> title data=summary.title big=true}}
-
-            <div>
-                <p>
-                    {{summary.text}}
-                </p>
-            </div>
+            {{> title data="My education" big=true}}
+            <ul>
+                {{#each educations}}
+                <li>
+                    {{name}}
+                    {{#unless isEnd}} (ще навчаюсь) {{/unless}}
+                </li>
+                {{/each}}
+            </ul>
         </section>
 
-        {{#with experience}}
         <section>
-            {{> title data=title}}
-            <div>
-                <p>
-                    {{text}}
-                </p>
-            </div>
+            {{> title data="My certificates"}}
+            <ul>
+                {{#each certificates}}
+                <li>
+                    {{name}} ({{id}})
+                </li>
+                {{/each}}
+            </ul>
+
         </section>
-        {{/with}}
     </main>
     {{/with}}
-
-
 </div>
 
 {{!--
