--- a/src/layout/shop.hbs
+++ b/src/layout/shop.hbs
@@ -7,52 +7,24 @@
 
 <head>
 	<title>
-		{{page.title}}
+		Person, Bio, Program, Web page
 	</title>
 	<meta charset='utf-8' />
-
 	<link href='css/index.css' rel='stylesheet' />
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 
 <body class="p-5">
-	{{#with header}}
-	<header>
-		<div>
-			<h1>{{name.firstname}} {{name.lastname}}</h1>
-		</div>
-		<div>
-			<b>{{position}}</b>
-		</div>
-		<br>
-		<div>
-			<em>
-				{{salary}}
-			</em>
-		</div>
-		<br>
-		<div>
-			<address>{{address}}</address>
-		</div>
-		<br>
-		<hr>
-	</header>
-	{{/with}}
 
-	{{> nav}}
 
 	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу --}}
 	{{{body}}}
-	<br>
-	<hr>
-
-
-	{{> footer social=footer.cosial firstname=header.name.firstname lastname=header.name.lastname
-	address=header.address}}
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 
