--- a/src/layout/shop.hbs
+++ b/src/layout/shop.hbs
@@ -18,6 +18,7 @@
 </head>
 
 <body class="p-5">
+	{{>shopheader}}
 
 
 	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу --}}
@@ -26,6 +27,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 
+	{{>shopfooter}}
 </body>
 
 </html>
