--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,11 +1,75 @@
-{{!-- 
-Це код container файлу для index сторінки, 
+{{!--
+Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- --}}
-
-<h1>Hello world</h1>
-
-{{!-- 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
 --}}
+
+<div class="display-5 text-center my-3"><b>Список сторінок</b></div>
+
+<p class="text-center mb-5">Учбовий проект у 4 частинах</p>
+
+<div class="row g-2">
+    <div class="card d-flex flex-row mb-2 border-success border-2">
+        <section class="card bg-dark col-4 p-2 m-3">
+            {{#each Summary}}
+            <a href="{{link}}" alt="{{text}}" class="btn btn-outline-info mb-2">{{text}}</a>
+            {{/each}}
+        </section>
+        <div class="col-8 display-5 text-info ms-2 mt-5"><b>Summary</b>
+
+        </div>
+    </div>
+</div>
+
+<div class="row g-2">
+    <div class="card d-flex flex-row mb-2 border-success border-2">
+        <div class="col-1"></div>
+        <section class="card bg-dark col-4 p-2 m-3">
+            {{#each Pages}}
+            <a href="{{link}}" alt="{{text}}" class="btn btn-outline-danger mb-2">{{text}}</a>
+            {{/each}}
+        </section>
+
+        <div class="col-7  display-5 text-danger ms-2 mt-5"><b>Handlbars tasks</b>
+
+        </div>
+    </div>
+</div>
+
+
+
+
+
+<div class="row g-2">
+    <div class="card d-flex flex-row mb-2 border-success border-2">
+        <div class="col-2"></div>
+        <section class="card bg-dark col-4 p-2 m-3">
+            {{#each Bootstrap_task}}
+            <a href="{{link}}" alt="{{text}}" class="btn btn-outline-success mb-2">{{text}}</a>
+            {{/each}}
+        </section>
+        <div class="col-6  display-5 text-success ms-2 mt-5"><b>Bootstrap tasks</b>
+        </div>
+
+    </div>
+</div>
+
+<div class="row g-2">
+    <div class="card d-flex flex-row mb-2 border-success border-2">
+        <div class="col-3"></div>
+        <section class="card bg-dark col-4 p-2 m-3">
+            {{#each Shop}}
+            <a href="{{link}}" alt="{{text}}" class="btn btn-outline-warning mb-2">{{text}}</a>
+            {{/each}}
+        </section>
+        <div class="col-5 display-5 text-warning ms-2 mt-5"><b>Shop</b>
+        </div>
+    </div>
+</div>
+
+
+{{!--
+Цей код містить лише те, що буде виводитись в
+
+<body>
+    Адже наш layout/default.hbs має вже структуру HTML
+    --}}
