--- a/src/layout/index.hbs
+++ b/src/layout/index.hbs
@@ -7,36 +7,41 @@
 
 <head>
 	<title>
-		{{page.title}}
+		Resume project
 	</title>
 	<meta charset='utf-8' />
 
-	<link href='css/index.css' rel='stylesheet' />
-
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+	<link href='css/index.css' rel='stylesheet' />
+
 </head>
 
 <body class="p-5">
-	{{> nav}}
+
+	<div class="card bg-success p-2 mb-4">
+
+		<div class="row">
+			<div class="col-7">
+				<h4 class="text-info p-2 ms-3">Вікторія Овсієнко</h4>
+			</div>
+
+			<div class="col-5">
+				<div>
+					<h4 class="text-end p-2 me-3">{{name}}</h4>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
-
-	<br>
-	<hr>
 
 	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу --}}
 	{{{body}}}
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-	<br>
-	<hr>
-
-
-	<footer>
-		{{>footer}}
-	</footer>
 
 </body>
 
